objects/Communication_Preference__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Communication Preferences</relationshipLabel>
        <relationshipName>Communication_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quotation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reminder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recall advice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event invitation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instant Message</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>New Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts &amp; Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>TNZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aioi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Communication Preference</label>
    <nameField>
        <displayFormat>CP-{00000000}</displayFormat>
        <label>Communication Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>